force-app/main/default/objects/samples__c/samples__c.object-meta.xml
<CustomObject>
    <label>samples</label>
    <nameField>
        <label>samples Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sampless</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>