force-app/main/default/objects/samples__c/fields/Date_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_1__c</fullName>
    <label>Date/Time 1</label>
    <type>DateTime</type>
</CustomField>