force-app/main/default/objects/samples__c/fields/Date_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_2__c</fullName>
    <label>Date/Time 2</label>
    <type>DateTime</type>
</CustomField>