force-app/main/default/objects/samples__c/fields/Datecombination__c.field-meta.xml
<CustomField>
    <fullName>Datecombination__c</fullName>
    <formula>(( Date_Time_2__c - Date_Time_1__c  ) * 1440 ) / 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datecombination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>