force-app/main/default/objects/samples__c/fields/Full__c.field-meta.xml
<CustomField>
    <fullName>Full__c</fullName>
    <formula>first_name__c +&quot; &quot; + last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full</label>
    <type>Text</type>
</CustomField>