force-app/main/default/objects/samples__c/fields/languag__c.field-meta.xml
<CustomField>
    <fullName>languag__c</fullName>
    <label>languag</label>
    <length>225</length>
    <type>Text</type>
</CustomField>