force-app/main/default/objects/samples__c/fields/Sample_Check__c.field-meta.xml
<CustomField>
    <fullName>Sample_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Check</label>
    <type>Checkbox</type>
</CustomField>