force-app/main/default/objects/samples__c/fields/Sample_names__c.field-meta.xml
<CustomField>
    <fullName>Sample_names__c</fullName>
    <label>Sample names</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>