force-app/main/default/objects/samples__c/fields/tax_paid__c.field-meta.xml
<CustomField>
    <fullName>tax_paid__c</fullName>
    <label>tax paid</label>
    <length>3</length>
    <type>Text</type>
</CustomField>