force-app/main/default/objects/samples__c/recordTypes/sample.recordType-meta.xml
<RecordType>
    <fullName>sample</fullName>
    <active>true</active>
    <label>sample</label>
</RecordType>