force-app/main/default/objects/samples__c/validationRules/error_prompt.validationRule-meta.xml
<ValidationRule>
    <fullName>error_prompt</fullName>
    <active>true</active>
    <description>this is an rule which should say .. if the value is not entered into the field.</description>
    <errorConditionFormula>AND( ISPICKVAL( Sample_names__c , &#39;price&#39;) ,
               ISBLANK(  tax_paid__c ) )</errorConditionFormula>
    <errorMessage>orey jaffaa .. dobinaiyaa kalluuu</errorMessage>
</ValidationRule>