force-app/main/default/objects/samples__c/validationRules/namerule.validationRule-meta.xml
<ValidationRule>
    <fullName>namerule</fullName>
    <active>false</active>
    <description>this is a validation rule to calculate the name</description>
    <errorConditionFormula>OR ( 
ISPICKVAL(Sample_names__c,  &#39; Price&#39; ) ,
 ISBLANK( tax_paid__c ) )</errorConditionFormula>
    <errorMessage>ERROR ERROR</errorMessage>
</ValidationRule>