force-app/main/default/objects/samples__c/validationRules/rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(  languag__c )</errorConditionFormula>
    <errorMessage>orey yedhava.. value marchaku ra</errorMessage>
</ValidationRule>