force-app/main/default/objects/samples__c/validationRules/Ruleforprofile.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruleforprofile</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( ISBLANK( Date__c )) ,
 ISBLANK(first_name__c) , 
NOT($Profile.Name = &quot;System Administrator&quot;) 
)</errorConditionFormula>
    <errorMessage>Get well soon nana</errorMessage>
</ValidationRule>